--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "google/recaptcha": "^1.3",
         "guzzlehttp/guzzle": "^7.2",
         "hardevine/shoppingcart": "*",
         "laravel/framework": "^10.0",
