--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
         "barryvdh/laravel-dompdf": "^2.0",
         "google/recaptcha": "^1.3",
         "guzzlehttp/guzzle": "^7.2",
-        "hardevine/shoppingcart": "*",
+        "hardevine/shoppingcart": "^3.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "maatwebsite/excel": "*",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "1.0",
         "realrashid/sweet-alert": "^6.0"
     },
     "require-dev": {
